# vmdetect

./: .gitignore  .gitmodules  CHANGELOG  MANIFEST.in  Makefile.in  PKGBUILD.mingw  README.md  autogen.sh  configure.ac  libvmdetect.pc.in  meson.build  meson.options  pyproject.toml  run.sh  setup.py  vmdetect.cbp
.github/workflows/: codeql-analysis.yml  codeql.yml  msvc.yml  msys.yml  msys2.yml  publish.yml  pycheck.yml  pypi.yml  wincheck.yml
arch/: PKGBUILD
debian/: changelog  changelog.in  control  control.in  rules  shlibs  vmdetect.dsc  vmdetect.dsc.in
po/: POTFILES.in  meson.build  pt_BR.po
rpm/: _service  _servicedata  vmdetect.spec
sdk/: dynamic.pc.in  static.pc.in
sdk/linux/: dynamic.pc.in  static.pc.in
sdk/windows/: dynamic.pc.in  static.pc.in
src/include/: config.h.in
src/include/private/: python.h
src/include/vmdetect/: virtualmachine.h
src/libvmdetect/: common.cc
src/libvmdetect/include/: config.h.in
src/libvmdetect/include/vmdetect/: defs.h  virtualmachine.h
src/libvmdetect/os/linux/: virtualmachine.cc
src/libvmdetect/os/windows/: resources.rc.in  virtualmachine.cc
src/python/: get.cc  init.c
src/vmdetect/: vmdetect.cc
win/: Makefile.msc  ci-build.sh
win/x86_64/: CHANGELOG  mingw64-vmdetect.spec
