[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[tool.meson-python.args]
setup = ['-Dinstall_sdk=false', '-Dinstall_bin=false', '-Dinstall_python=true']

[project]
name = 'virtualmachine'
version = '1.3.1'
description = 'Identify virtual machine'
readme = 'README.md'
requires-python = '>=3.8'
license = { file = 'LICENSE' }
authors = [
  { name = 'Perry Werneck', email = 'perry.werneck@gmail.com' },
]

